--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -856,6 +856,89 @@ main {
 footer {
   min-height: 90px;
   background-color: $veryDarkBlue;
+  .footer-container {
+    @include wrapper(1140, 30);
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    @include media-max-width(750) {
+      flex-direction: column;
+    }
+
+    a {
+      color: #ffffff;
+      text-transform: uppercase;
+      transition: 0.5s all ease-in-out;
+
+      &:hover {
+        color: $secondary_clr;
+      }
+    }
+
+    .logo-link {
+      display: flex;
+      align-items: center;
+    }
+
+    .bottom-logo {
+      filter: contrast(10) invert(1) hue-rotate(115deg);
+      margin-right: 60px;
+      padding-right: 5px;
+      transition: 1s all ease-in-out;
+      @include media-max-width(750) {
+        margin-right: 0;
+        margin-bottom: 40px;
+      }
+
+      &:hover {
+        filter: invert(0);
+        background-color: rgba($color: #ffffff, $alpha: 0.5);
+        border-radius: 50px 0 0 50px;
+      }
+    }
+
+    .links {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      @include media-max-width(750) {
+        flex-direction: column;
+      }
+
+      & > li {
+        margin-right: 45px;
+        @include media-max-width(750) {
+          margin-right: 0;
+          margin-bottom: 35px;
+        }
+      }
+
+      a {
+        font-size: 16px;
+      }
+    }
+
+    .social-icons {
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      @include media-max-width(750) {
+        margin-right: auto;
+      }
+
+      .icon {
+        margin-left: 40px;
+        @include media-max-width(750) {
+          margin: 0 20px;
+        }
+
+        a {
+          font-size: 28px;
+        }
+      }
+    }
+  }
 
   .attribution {
     color: #ffffff;
